tests/parsing/invalid-attribute-body.stderr
error[E010]: found `[`, but expected identifier or `(`
 --> ${DIRECTORY}/parsing/invalid-attribute-body.lushui:3:2
  |
3 | @[attempt] to try something new
  |  ^ unexpected token
  |
 note: `@` introduces attributes

error: aborting due to previous error

